@@ -1,5 +1,7 @@
 2012-11-14  Simson Garfinkel  <simsong@npsair.local>
 
+	* src/tcpip.cpp (tcpip::store_packet): added bytes_processed addition so that <fileobject> <filesize> is properly updated.
+
 	* src/be13_api/bulk_extractor_i.h: renamed histograms to be feature_histograms
 
 	* src/plugin.cpp (process_sbuf): renamed process_extract to process_sbuf and put it here.
